--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 							<div class="vContainer">
 								<a href="http://happy.createvisual.net" target="_blank">
 									<div class="vOverlay">
-										<h3>Happy festival</h3>
-										<p>Underground four day festival</p>
+										<h3>Festival</h3>
+										<p>Gatherings in iceland</p>
 									</div>
 									<img src="img/vidCal/happy_ep1.png" />
 								</a>
@@ -249,7 +249,7 @@
 								<div class="aboutLinkRow">
 									<a href="http://about.me/createvisualpiecebypiece" target="_blank" class="masterTooltip" title="About Piece by piece<br />A show about Icelandic street art">Piece by Piece</a>
 									<a href="http://about.me/createvisualinstorage" target="_blank" class="masterTooltip" title="About In storage<br /> Unreleased footage now available">In Storage</a>
-									<a href="http://about.me/createvisualhappy" target="_blank" class="masterTooltip" title="About festival<br /> gatherings in iceland">Happy</a>
+									<a href="http://about.me/createvisualfestival" target="_blank" class="masterTooltip" title="About Festival<br /> gatherings in iceland">Festival</a>
 								</div>
 								<div class="aboutLinkRow">
 									<a href="http://about.me/createvisualdingdong" target="_blank" class="masterTooltip" title="About Ding dong<br /> Icelandic sketch show">Ding Dong</a>
