Update from live

--- a/index.html
+++ b/index.html
@@ -157,36 +157,40 @@
 							</div>
 							<!-- -->
 							<div class="vContainer">
+								<a href="http://local.createvisual.net/" target="_blank">
 									<div class="vOverlay">
 										<h3>Local</h3>
-										<p>Insight into local produce<br />Episode 1 release date july 21</p>
+										<p>Insight into local produce</p>
 									</div>
 									<img src="img/vidCal/local_ep1.png" />
-									<div class="n n21"></div>
+								</a>
 							</div>
 							<div class="vContainer">
-									<div class="vOverlay">
-										<h3>Venture</h3>
-										<p>Rapper's delight<br />Episode 1 release date july 23</p>
-									</div>
-									<img src="img/vidCal/venture_ep1.png" />
-									<div class="n n23"></div>
-							</div>
-							<div class="vContainer">
+								<a href="http://icelandicskatemovies.createvisual.net/" target="_blank">
 									<div class="vOverlay">
 										<h3>Icelandic skatemovies</h3>
-										<p>Icelandic skatemovies in one place<br />Episode 1 release date july 25</p>
+										<p>Icelandic skatemovies in one place</p>
 									</div>
 									<img src="img/vidCal/skatemovies.png" />
-									<div class="n n25"></div>
+								</a>
 							</div>
 							<div class="vContainer">
+								<a href="http://venture.createvisual.net/" target="_blank">
+									<div class="vOverlay">
+										<h3>Venture</h3>
+										<p>Rapper's delight</p>
+									</div>
+									<img src="img/vidCal/venture_ep1.png" />
+								</a>
+							</div>
+							<div class="vContainer">
+								<a href="http://aftermath.createvisual.net/" target="_blank">
 									<div class="vOverlay">
 										<h3>Aftermath</h3>
-										<p>A show about skateboarders<br />Episode 1 release date july 28</p>
+										<p>A show about skateboarders</p>
 									</div>
 									<img src="img/vidCal/aftermath_ep1.png" />
-									<div class="n n28"></div>
+								</a>
 							</div>
 
 						</div>
@@ -225,10 +229,10 @@
 							<div class="vContainer">
 									<div class="vOverlay">
 										<h3>Create Magazine</h3>
-										<p>Issue 1 release date august 6</p>
+										<p>Issue 1 release date august 23</p>
 									</div>
 									<img src="img/p3/thumb_3_magazine.png" />
-									<div class="n n06"></div>
+									<div class="n n23"></div>
 							</div>
 							<div class="vContainer">
 								<a href="https://www.facebook.com/nolandrvk" target="_blank">
@@ -322,6 +326,15 @@
 		<script src="js/enquire.min.js"></script>
         <script src="js/skrollr.js"></script>
         <script src="js/main.js"></script>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+		  ga('create', 'UA-53497082-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
 	</body>
 </html>
