--- a/index.html
+++ b/index.html
@@ -229,12 +229,13 @@
 									</a>
 								</div>
 								<div class="vContainer">
+									<a href="http://magazine.createvisual.net" target="_blank">
 										<div class="vOverlay">
 											<h3>Create Magazine</h3>
-											<p>Issue 1 release date august 23</p>
+											<p>Issue 1</p>
 										</div>
 										<img src="img/p3/thumb_3_magazine.png" />
-										<div class="n n23"></div>
+									</a>
 								</div>
 								<div class="vContainer">
 									<a href="https://www.facebook.com/nolandrvk" target="_blank">
@@ -263,7 +264,7 @@
 								<a href="http://about.me/icelandicskatemovies" target="_blank" class="masterTooltip tight" title="About Icelandic skatemovies<br /> Icelandic skatemovies in one place">Icelandic skatemovies</a>
 							</div>
 
-							<div id="sponsors" >
+							<div id="sponsors">
 
 								<div class="vidBox">
 									<h2>Thanks to our sponsors</h2>
